fixing sonar issues